[package]
name = "ping-pong"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-schema = { version = "1.1.0" }
cw2 = "1.1.2"
cw20 = "1.1.2"
cw20-base = "1.1.2"
cw-storage-plus = "1.1.2"
cosmwasm-std = { version = "1.1.0" }
schemars = "0.8.1"
semver = "1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.23" }